Scripts to get hold of OpenAM 11 and 12 from svn tags.